# lumen

./: .gitignore  .gitmodules  DEPLOYMENT.md  E2E_TEST_ISSUES_AND_OPTIMIZATIONS.md  README.md  agent_capabilities.json  architecture_brainstorm.md  architecture_v1.md  architecture_v2.md  config.json  config.json.template  config.py  deploy.sh  input.txt.template  kernel_config.example.json  langgraph.json  llm_config.py  main.py  maintenance_config.example.json  paths.py  project.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_kernel_cases.json  self_test_config.json  self_test_main.py  spec.md  studio_input.example.json  test_integration.py  test_verify.py
agents/: backends.py  contracts.py  coordinator.py  crash_tools.py  error_handling.py  executor.py  executor_aggregate.py  input_artifacts.py  kernel_expert.py  kernel_tools.py  knowledge_base.py  llm_display.py  parsers.py  persistent_qemu.py  pm.py  qemu_tools.py  rag_integration.py  reviewer.py  semcode_path_analysis.py  session.py  test_expert.py  test_runner.py  tool_calling_loop.py  tool_expert.py  validator.py
config/: semcode-mcp.json
deadlock_analysis_output/: end_to_end_validation.py
graph/: rn_router.py  rn_state.py  rn_workflow.py  router.py  state.py  workflow.py
prompts/: coordinator.md  crash_analysis.md  executor.md  kernel_expert.md  kernel_log_analysis.md  knowledge_base.md  lock_analysis.md  reviewer.md  test_expert.md
scripts/: build_arm64_deadlock_testcase.sh  check_agent_contracts.py  provision_qemu_ssh_image.sh  run_e2e_checks.py  run_static_checks.py
(+164 files in other folders)
