[project]
name = "lumen"
version = "0.1.0"
description = "LangGraph multi-agent workflow for Linux kernel maintenance analysis"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.2.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "tools*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::_pytest.warning_types.PytestReturnNotNoneWarning",
]
markers = [
    "online: tests that call live LLM APIs or external crash sessions",
]
testpaths = ["dev/tests"]
pythonpath = ["."]
